fix: fix filters & collapsePanel

--- a/src/components/Filter/FiltersContent/FiltersContent.scss
+++ b/src/components/Filter/FiltersContent/FiltersContent.scss
@@ -5,11 +5,6 @@
   padding: $filters-content-popup-default-padding;
 }
 
-@mixin flex-between() {
-  display: flex;
-  justify-content: space-between;
-}
-
 $prefix: filters-content;
 
 .#{$prefix} {
@@ -26,53 +21,6 @@ $prefix: filters-content;
 
     &.top {
       max-height: $filters-content-popup-top-content-max-height;
-    }
-  }
-
-  &-item {
-    margin-bottom: px(20);
-
-    &-title {
-      @include flex-between;
-
-      margin-bottom: px(8);
-
-      &-label {
-        max-width: 80%;
-        font-weight: $hui-font-weight-medium;
-        color: $hui-color-grey-1;
-
-        @include no-wrap;
-      }
-
-      &-toggle {
-        width: 20%;
-        color: $hui-color-grey-2;
-        text-align: center;
-
-        .upward {
-          transition: all 0.3s ease;
-          transform: rotate(-180deg);
-        }
-
-        .downward {
-          transition: all 0.3s ease;
-          transform: rotate(0deg);
-        }
-      }
-    }
-
-    &-content {
-      height: 0;
-      padding: 0;
-      overflow: hidden;
-      background: #f5f5f5;
-      transition: all 0.4s ease;
-
-      &-active {
-        height: auto;
-        padding: px(16);
-      }
     }
   }
 }
